fix/style/use bootstrap 5.3

--- a/_includes/support.html
+++ b/_includes/support.html
@@ -2,14 +2,12 @@
 <section class="p-5" id="Support">
     <div class="mx-auto mb-5">
         <div class="container shadow border-0 bg-primary rounded-0">
-            <!-- bs5 no-gutters -> g-0 -->
-            <div class="d-table-row no-gutters">
+            <div class="d-table-row g-0">
                 <div class="d-table-cell px-4 align-middle text-center">
                     <h3 class="fw-bolder">Support Center</h3>
                     <div>Find answers and ask questions.</div>
                 </div>
-                <!-- bs5 border-left -> border-start -->
-                <div class="col-sm-auto border-white my-3 px-4 py-2 border-left">
+                <div class="col-sm-auto border-white my-3 px-4 py-2 border-start">
                     <p class="card-text">
                         <em>The one who knows all the answers has not been asked all the questions.</em>
                         – Confucius.
