--- a/_includes/donate.html
+++ b/_includes/donate.html
@@ -1,15 +1,13 @@
 <!-- Donate section-->
 <section class="p-5" id="Donate">
     <div class="container mb-5 shadow border-0 card-custom rounded-0">
-        <!-- bs5 no-gutters -> g-0 -->
-        <div class="d-table-row no-gutters">
+        <div class="d-table-row g-0">
             <div class="d-table-cell px-3 align-middle text-center">
                 <h1>
                     <i class="fa-fw fas fa-coins"></i>
                 </h1>
             </div>
-            <!-- bs5 border-left -> border-start -->
-            <div class="col-sm-auto border-white my-3 px-3 py-2 border-left">
+            <div class="col-sm-auto border-white my-3 px-3 py-2 border-start">
                 <div class="container">
                     <h4 class="card-title mb-3 fw-bolder">Donate</h4>
                 </div>
