--- a/_includes/giscus-comment.html
+++ b/_includes/giscus-comment.html
@@ -1,3 +1,7 @@
+{% comment %}
+    TODO: Delete this file once upstreamed in https://github.com/daattali/beautiful-jekyll/pull/1407
+{% endcomment %}
+
 {% if site.giscus.repository and site.giscus.hostname %}
 
 <script src="https://{{ site.giscus.hostname }}/client.js"
