--- a/_includes/support.html
+++ b/_includes/support.html
@@ -13,7 +13,7 @@
                         – Confucius.
                     </p>
                     <div class="input-group mb-2">
-                        <a href="support">
+                        <a href="{{ '/support' | relative_url }}">
                             <button class="btn btn-outline-light rounded-0"
                                     id="button-support"
                                     type="button"
