feat(pages): add roadmap page

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -20,6 +20,10 @@ body {
     background-color: var(--navbar-col) !important;
 }
 
+.modal-content {
+    background-color: var(--footer-col) !important;
+}
+
 /* in line code */
 code {
   color: var(--mid-col);
