--- a/_sass/circular-progress.scss
+++ b/_sass/circular-progress.scss
@@ -89,7 +89,7 @@
 
 .circular-button .button-value {
   font-size: 0.85rem;
-  line-height: 1;
+  line-height: 0.5;
 }
 
 .circular-button .progress-bar {
@@ -98,4 +98,19 @@
 
 .circular-button.active .button-content {
   box-shadow: 0 0 10px 3px rgba(13, 110, 253, 0.5);
+}
+
+.circular-button .button-image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.circular-button .button-image {
+  max-width: 2.5rem;
+  max-height: 2.5rem;
+  width: auto;
+  height: auto;
 }
