add licenses and attribution

--- a/_includes/footer-extra.html
+++ b/_includes/footer-extra.html
@@ -3,3 +3,5 @@
 <a title="Privacy Policy" href="{{ '/privacy' | relative_url }}" class="text_muted">Privacy</a>
 &nbsp;&bull;&nbsp;
 <a title="Terms and Conditions" href="{{ '/terms' | relative_url }}" class="text_muted">Terms</a>
+&nbsp;&bull;&nbsp;
+<a title="Licenses and Attribution" href="{{ '/licenses' | relative_url }}" class="text_muted">Licenses</a>
