fix: style list-groups

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -1,5 +1,9 @@
 @import "admonition";
 
+:root {
+  --bs-list-group-bg: #var(--navbar-col);
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
 }
