--- a/_includes/license-entry.html
+++ b/_includes/license-entry.html
@@ -1,10 +1,10 @@
-<li class="list-group-item bg-dark text-white">
+<li class="list-group-item license-entry-item">
     <div class="d-flex justify-content-between align-items-center">
         <div>
             <strong>{{ include.item.name }}</strong>
             {% if include.item.version %}<span class="ms-2 badge bg-secondary">{{ include.item.version }}</span>{% endif %}
-            <small class="d-block text-muted">
-                <a href="{{ include.item.url }}" target="_blank" class="text-info">{{ include.item.url }}</a>
+            <small class="d-block license-entry-text-muted">
+                <a href="{{ include.item.url }}" target="_blank" class="license-entry-link">{{ include.item.url }}</a>
             </small>
         </div>
         <span class="badge bg-primary">{{ include.item.license }}</span>
