--- a/_includes/support.html
+++ b/_includes/support.html
@@ -1,7 +1,7 @@
 <!-- Support -->
 <section class="p-5" id="Support">
     <div class="mx-auto mb-5">
-        <div class="container shadow border-0 bg-primary rounded-0">
+        <div class="container shadow border-0 bg-primary text-white rounded-0">
             <div class="d-table-row g-0">
                 <div class="d-table-cell px-4 align-middle text-center">
                     <h3 class="fw-bolder">Support Center</h3>
