--- a/_sass/circular-progress.scss
+++ b/_sass/circular-progress.scss
@@ -16,7 +16,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 5px solid #2b3035;
+  border: 5px solid var(--circular-progress-border);
   position: absolute;
   top: 0;
   left: 0;
@@ -69,7 +69,7 @@
   width: 80%;
   height: 80%;
   border-radius: 50%;
-  background: #2b3035;
+  background: var(--circular-progress-bg);
   display: flex;
   flex-direction: column;
   justify-content: center;
